tests/errors/str_has_no_method.b
fn main() {
    str s = "hello";
    s.foo();
}
